--- a/MyApplication/app/src/main/res/layout/activity_editor.xml
+++ b/MyApplication/app/src/main/res/layout/activity_editor.xml
@@ -54,7 +54,7 @@
             <EditText
                 android:id="@+id/edit_price"
                 android:hint="售价"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 style="@style/EditorFieldStyle"/>
         </LinearLayout>
     </LinearLayout>
